Refactor 회원가입, 아이디찾기, 비밀번호 찾기 로직 수정

--- a/src/main/resources/templates/user/findPw.html
+++ b/src/main/resources/templates/user/findPw.html
@@ -14,8 +14,8 @@
             <label for="userName">이름</label>
             <input type="text" name="userName" id="userName" required placeholder="이름">
 
-            <label for="email">이메일</label>
-            <input type="email" name="email" id="email" required placeholder="이메일">
+            <label for="userId">아이디</label>
+            <input type="text" name="userId" id="userId" required placeholder="아이디">
 
             <div class="btnSection">
                 <button type="submit" class="findPwBtn" id="findPwBtn">임시 비밀번호 발급</button>
