Refactor 로그인 잠금 기능 로직 수정, 아이디 저장 기능 추가

--- a/src/main/resources/static/css/user/login.css
+++ b/src/main/resources/static/css/user/login.css
@@ -76,6 +76,9 @@ label {
 
 .loginOption {
     font-size: 13px;
+    display: flex;
+    justify-content: center;
+    gap: 80px;
 }
 
 #rememberMe {
