--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -24,6 +24,10 @@
             </div>
             <div class="loginOption">
                 <label>
+                    <input type="checkbox" name="rememberId" id="rememberId" checked>
+                    아이디저장
+                </label>
+                <label>
                     <input type="checkbox" name="rememberMe" id="rememberMe" checked>
                     자동로그인
                 </label>
