Refactor 회원 가입, 아이디 찾기, 비밀 번호 찾기 기능 수정

--- a/src/main/resources/static/css/user/findId.css
+++ b/src/main/resources/static/css/user/findId.css
@@ -103,7 +103,7 @@ label {
     border: 1px solid #B4D4FD;
 }
 
-.blank {
+#userIdDisplay {
     display: flex;
     justify-content: center;
     align-items: center;
