--- a/src/main/resources/templates/user/findId.html
+++ b/src/main/resources/templates/user/findId.html
@@ -26,7 +26,7 @@
             </div>
             <input type="hidden" name="contact" id="contact">
 
-            <div id="userIdDisplay" class="blank"></div>
+            <div id="userIdDisplay"></div>
             <div class="btnSection">
                 <button type="submit" class="findIdBtn" id="findIdBtn">아이디 찾기</button>
                 <button type="button" class="homeBtn">로그인</button>
