--- a/src/main/resources/templates/user/signUp.html
+++ b/src/main/resources/templates/user/signUp.html
@@ -16,7 +16,7 @@
             <div id="idFeedback" class="feedback"></div>
 
             <label for="userPw">비밀번호</label>
-            <input type="password" name="userPw" id="userPw" required placeholder="비밀번호">
+            <input type="password" name="userPassword" id="userPw" required placeholder="비밀번호">
             <div id="pwFeedback" class="feedback"></div>
 
             <label for="confirmPw">비밀번호 확인</label>
