--- a/src/main/resources/static/css/user/login.css
+++ b/src/main/resources/static/css/user/login.css
@@ -81,6 +81,7 @@ label {
     gap: 80px;
 }
 
+#rememberId,
 #rememberMe {
     margin-right: 3px;
 }
@@ -117,4 +118,44 @@ label {
 .signUpFind a:not(:first-child)::before {
     content: "|";
     margin: 0 4px;
+}
+
+.socialLogin {
+    display: flex;
+    justify-content: center;
+    gap: 45px;
+}
+
+.kakao,
+.naver,
+.google {
+    width:40px;
+    height:40px;
+}
+
+.divider {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 0;
+    font-size: 12px;
+    color: #667373;
+    white-space: nowrap;
+}
+
+.divider:before,
+.divider:after {
+    content: "";
+    display: block;
+    width: 100px;
+    border-top: 1px solid #e6e6e6;
+    transform: scaleY(0.8);
+}
+
+.divider:before {
+    margin-right: 12px;
+}
+
+.divider:after {
+    margin-left: 12px;
 }
