--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -16,7 +16,7 @@
         <form class="loginForm">
             <div class="id">
                 <label>아이디</label>
-                <input type="text" name="username" id="username" placeholder="아이디">
+                <input type="text" name="username" id="userName" placeholder="아이디">
             </div>
             <div class="pw">
                 <label>비밀번호</label>
@@ -24,11 +24,11 @@
             </div>
             <div class="loginOption">
                 <label>
-                    <input type="checkbox" name="rememberId" id="rememberId" checked>
+                    <input type="checkbox" name="rememberId" id="rememberId">
                     아이디저장
                 </label>
                 <label>
-                    <input type="checkbox" name="rememberMe" id="rememberMe" checked>
+                    <input type="checkbox" name="rememberMe" id="rememberMe">
                     자동로그인
                 </label>
             </div>
@@ -40,8 +40,21 @@
         <a th:href="@{'/user/find-id'}">아이디찾기 </a>
         <a th:href="@{'/user/find-pw'}">비밀번호찾기</a>
     </div>
+    <div class="divider">
+        <span>또는</span>
+    </div>
+    <div class="socialLogin">
+        <div class="kakao">
+            <img th:src="@{/img/login/kakao.png}" width=40 height=40 alt="카카오">
+        </div>
+        <div class="naver">
+            <img th:src="@{/img/login/naver.png}" width=40 height=40 alt="네이버">
+        </div>
+        <div class="google">
+            <img th:src="@{/img/login/google.png}" width=40 height=40 alt="구글">
+        </div>
+    </div>
 </div>
-
 <div id="flashMessage" th:text="${message}" style="display:none;"></div>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script th:src="@{/js/user/login.js}"></script>
